# data-streaming-accelerators

./: DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/dynamic_interval_management/: README.md
docs/dynamic_interval_management/static/: pruning-mermaid.txt
docs/dynamic_point_aggregation/: README.md
docs/suffix_pattern_recognition/: README.md
dynamic_interval_management/: README.md
dynamic_interval_management/dev/: solution.py
dynamic_interval_management/static/: pruning-mermaid.txt
dynamic_interval_queries/: README.md
dynamic_point_aggregation/: README.md  requirements.txt
dynamic_point_aggregation/dev/: solution.py
src/data_streaming_accelerators/: api.py  common.py
src/data_streaming_accelerators/core/: dynamic_interval_management.py  dynamic_point_aggregation.py  suffix_pattern_recognition.py
suffix_pattern_recognition/: README.md
suffix_pattern_recognition/dev/: solution.py
suffix_pattern_recognition/static/: diagram-mermaid.txt
tests/: test_api.py  test_common.py  test_core.py
tests/core/: test_dynamic_interval_management.py  test_dynamic_point_aggregation.py  test_suffix_pattern_recognition.py
