[project]
name = "data-streaming-accelerators"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sortedcontainers>=2.4.0",
]

[project.optional-dependencies]
benchmark = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
lint = [
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_streaming_accelerators"]
